# webcensus

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  resolvers.txt
.github/workflows/: e2e.yml  skim.yml
ai-sandbox/: Dockerfile  Makefile
domain-lists/: 2026-04-26-with-security-txt.txt  2026-04-30-majestic-million-with-security-txt.txt
scripts/: download-and-verify.mjs  run.mjs  step1_download_domain_list.sh  step2_massdns.sh  step3_probe_status.sh  step4_collect.sh  step4_curl_config.mjs  step5_curl.sh  step6_filter.mjs
skim/: Cargo.toml
skim/src/: cli.rs  input.rs  lib.rs  main.rs  probe.rs  progress.rs  tls.rs
