[package]
name = "skim"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "time", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23.39", default-features = false, features = ["std", "tls12", "ring"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
humantime = "2.3"
webpki-roots = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
